# UDMarsRover

./: .buildinfo  DRIVE_CONTROL.md  README.md  SERIAL_PROTOCOL.md  genindex.html  index.html  search.html  searchindex.js
.devcontainer/: Dockerfile  devcontainer.json
XLRCableTestOnArduinoUno/XLRTestArduinoUnoR3NoSofrwareSerial/: XLRTestArduinoUnoR3NoSofrwareSerial.ino
XLRCableTestOnArduinoUno/XLRTestArduinoUnoR3NoString/: XLRTestArduinoUnoR3NoString.ino
archive_tests/2PiTest/: TestSuccessVaultPi.txt  rover_send.py  vault_test.py
archive_tests/Final2PiTest/: TestSuccessRoverPi.txt  rover_send.py  vault_test.py
archive_tests/Final2PiTest/TestSeccussRecord/: TestSuccessLogRoverPi.txt  TestSuccessLogVaultPi.txt
archive_tests/HackSim/: rover_hackSim.py  vault_hackSim.py
archive_tests/XLRCableTestOnArduinoUno/XLRTestArduinoUnoR3Final/: XLRTestArduinoUnoR3Final.ino
deployment/rover/: Dockerfile  deploy-todo.md  docker-compose.yaml  docker-install.sh  install.sh  rover.service
docs/source/: conf.py
docs_md/mini_rover/: README.md
opentera-docker/: Dockerfile  DockerfileOLD  entrypoint.sh  webrtc_ingest.py
rover_setup/: install.sh  ros-humble-install.sh  ros-jazzy-install.sh  run.sh  setup.sh  uros-install.sh
setup/: camera_pi_setup.bash
src/arm/: package.xml  setup.py
src/arm/arm/: robot.urdf  serial_node.py
src/arm/launch/: view_robot.launch.py
src/base_station/: package.xml  setup.py
src/base_station/launch/: base_launch.py
src/camera_module/: package.xml  requirements.txt  setup.py
src/camera_module/camera_module/: aruco.py  arucoDetection.py  aruco_detector.py  camera_publisher.py  camera_server.py  camera_viewer.py  servo_ros.py  test-servo.py
src/rover/: package.xml  setup.py
src/rover_touch/: CMakeLists.txt  package.xml
src/rover_touch/src/: main.cpp  mainwindow.cpp  mainwindow.h  touch_ui_node.h  ui_node.cpp  ui_node.h
src/ui/: CameraTest.py  Capture.py  GPTCameraTest.py  Terminal.py  main.py  map.py  windows.py
(+47 files in other folders)
